--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,38 @@
+/* eslint-disable */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.loader {
-  width: 48px;
-  height: 48px;
-  background: theme(colors.stone.50);
-  border-radius: 50%;
-  position: relative;
-  animation: skLinRotate 1s ease-in-out infinite alternate;
-}
-.loader:after {
-  content: '';
-  position: absolute;
-  inset: 5px;
-  border-radius: 50%;
-  border: 5px solid transparent;
-  border-top-color: theme(colors.red.500);
-}
-@keyframes skLinRotate {
-  95%,
-  100% {
-    transform: rotate(840deg);
+@layer components {
+  .input {
+    @apply w-72 rounded-full p-2 px-4 transition-all focus:outline-red-500 md:w-96;
+  }
+
+  .form-field {
+    @apply mt-5 flex flex-col gap-5 md:flex-row md:items-center md:justify-between;
+  }
+
+  .loader {
+    width: 48px;
+    height: 48px;
+    background: theme(colors.stone.50);
+    border-radius: 50%;
+    position: relative;
+    animation: skLinRotate 1s ease-in-out infinite alternate;
+  }
+  .loader:after {
+    content: '';
+    position: absolute;
+    inset: 5px;
+    border-radius: 50%;
+    border: 5px solid transparent;
+    border-top-color: theme(colors.red.500);
+  }
+  @keyframes skLinRotate {
+    95%,
+    100% {
+      transform: rotate(840deg);
+    }
   }
 }
